Corregi un par de cosas

--- a/register.html
+++ b/register.html
@@ -67,15 +67,19 @@
                     </div>
 
                     <div>
-                        <input class="input"  id="email" class="textoregister" type="email" name="mail" value="">
+                        <input class="input textoregister"  id="email" type="email" name="mail" value="">
                     </div>
 
                     <div>
-                        <label  for="contraseña" class="texto" class="textooculto">Contraseña:</label>
+                        <label  for="contraseña" class="texto">Contraseña:</label>
                     </div>
 
                     <div>
-                        <input class="input" class="textocontraseña" id="password" type="password" name="pass" value="">
+                        <input class="input textocontraseña" id="password" type="password" name="pass" value="">
+                    </div>
+
+                    <div class="textooculto">
+                        <p class="pOculto">La contraseña debe tener al menos 6 caracteres</p>
                     </div>
 
                     <div>
@@ -83,16 +87,20 @@
                     </div>
 
                     <div>
-                        <input class="input" class="textocontraseña2" id="password" type="password" name="pass" value="">
+                        <input class="input textocontraseña2" id="password" type="password" name="pass" value="">
+                    </div>
+
+                    <div class="textooculto2">
+                        <p class="pOculto">Las contraseñas no coinciden</p>
+                    </div>
+
+                    <div>
+                        <input type="checkbox" name="hobbies" value="acepto" id="acepto">
+                        <label>Acepto términos y condiciones</label>
                     </div>
 
                     <div>
                         <button type="submit">Registrarme</button>
-                    </div>
-
-                    <div>
-                        <input type="checkbox" name="hobbies" value="acepto">
-                        <label>Acepto términos y condiciones</label>
                     </div>
 
                     <div>
