--- a/login.html
+++ b/login.html
@@ -71,15 +71,19 @@
                     </div>
 
                     <div>
-                        <label for="contraseña" class="textooculto">Contraseña:</label>
+                        <label for="contraseña">Contraseña:</label>
                     </div>
 
                     <div>
                         <input id="password" class="textocontraseña" type="password" name="pass" value="" >
                     </div>
 
+                    <div class="textooculto">
+                        <p class="pOculto">La contraseña debe tener al menos 6 caracteres</p>
+                    </div>
+
                     <div>
-                        <button>Ingresar</button>
+                        <button type="submit">Ingresar</button>
                     </div>
 
                     <div>
