--- a/search-results.html
+++ b/search-results.html
@@ -62,59 +62,13 @@
         <section class="seccion_cuerpo">
 
             <article class="titulo">
-                <h2>Resultados para tu búsqueda de estilo y cuidado personal</h2>
+                <h2>Resultados para tu búsqueda de</h2>
             </article>
 
-            <section class="seccion_gral_productos">
+            <ul>
 
-
-                <article class="article_productos">
-                    <h4>Paleta de Sombras Nude</h4>
-                    <img src="./img/paleta.jpg" alt="paleta de sombras nude">
-                    <p class="descrip_prod">12 tonos mate y satinados, ideales para looks de día y de noche.</p>
-                    <p class="precio">$15.000</p>
-                    <a class="verDetalle" href="./product.html">Ver detalle</a>
-                </article>
-
-                <article class="article_productos">
-                    <h4>Labial Líquido Mate</h4>
-                    <img src="./img/labial.jpg" alt="labial líquido mate rojo">
-                    <p class="descrip_prod">Labial de larga duración, acabado aterciopelado en tono rojo clásico.</p>
-                    <p class="precio">$7.200</p>
-                    <a class="verDetalle" href="./product.html">Ver detalle</a>
-                </article>
-
-                <article class="article_productos">
-                    <h4>Buclera para el Cabello</h4>
-                    <img src="./img/buclera.jpg" alt="plancha profesional para el cabello">
-                    <p class="descrip_prod">Crea ondas definidas y duraderas con recubrimiento cerámico.</p>
-                    <p class="precio">$28.500</p>
-                    <a class="verDetalle" href="./product.html">Ver detalle</a>
-                </article>
-
-                <article class="article_productos">
-                    <h4>Set de Skincare Diario</h4>
-                    <img src="./img/skincare.jpg" alt="set de skincare con crema y limpiador facial">
-                    <p class="descrip_prod">Incluye limpiador facial, tónico hidratante y crema nutritiva.</p>
-                    <p class="precio">$19.800</p>
-                    <a class="verDetalle" href="./product.html">Ver detalle</a>
-                </article>
-
-                <article class="article_productos">
-                    <h4>Vestido Estampado de Verano</h4>
-                    <img src="./img/vestidoestampa.jpg" alt="vestido de verano estampado floral">
-                    <p class="descrip_prod">Vestido fresco y cómodo con diseño floral, ideal para días soleados.</p>
-                    <p class="precio">$32.000</p>
-                    <a class="verDetalle" href="./product.html">Ver detalle</a>
-                </article>
-
-                <article class="article_productos">
-                    <h4>Cartera Tote Minimalista</h4>
-                    <img src="./img/totebag.jpg" alt="cartera tote minimalista color beige">
-                    <p class="descrip_prod">Cartera amplia y elegante, perfecta para combinar con cualquier outfit.</p>
-                    <p class="precio">$27.500</p>
-                    <a class="verDetalle" href="./product.html">Ver detalle</a>
-                </article>
+            </ul>
+            
     </main>
 
     <footer>
