Avance con search results

--- a/search-results.html
+++ b/search-results.html
@@ -60,14 +60,9 @@
         </aside>
 
         <section class="seccion_cuerpo">
+            
+        </section>
 
-            <article class="titulo">
-                <h2>Resultados para tu búsqueda de</h2>
-            </article>
-
-            <ul>
-
-            </ul>
             
     </main>
 
