--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <ul class="ul_header ul_ir_form">
                     <li><a class="a_header" href="./login.html"> Login</a></li>
                     <li><a class="a_header" href="./register.html"> Registrate</a></li>
+                    <li class = "saludo"></li>
                 </ul>
 
             </section>
@@ -100,6 +101,7 @@
     <script src="./js/index.js"></script>
     <script src="./js/vallidar_buscador.js"></script>
     <script src="./js/categorias.js"></script>
+    <script src="./js/saludo.js"></script>
 </body>
 
 </html>
