--- a/category.html
+++ b/category.html
@@ -37,6 +37,7 @@
                 <ul class="ul_header ul_ir_form">
                     <li><a class="a_header" href="./login.html"> Login</a></li>
                     <li><a class="a_header" href="./register.html"> Registrate</a></li>
+                    <li class = "saludo"></li>
                 </ul>
 
             </section>
@@ -90,6 +91,7 @@
     <script src="./js/category.js"></script>
     <script src="./js/vallidar_buscador.js"></script>
     <script src="./js/categorias.js"></script>
+    <script src="./js/saludo.js"></script>
 </body>
 
 </html>
