--- a/product.html
+++ b/product.html
@@ -40,6 +40,7 @@
                 <ul class="ul_header ul_ir_form">
                     <li><a class="a_header" href="./login.html"> Login</a></li>
                     <li><a class="a_header" href="./register.html"> Registrate</a></li>
+                    <li class = "saludo"></li>
                 </ul>
 
             </section>
@@ -95,6 +96,7 @@
     <script src="./js/product.js"></script>
     <script src="./js/vallidar_buscador.js"></script>
     <script src="./js/categorias.js"></script>
+    <script src="./js/saludo.js"></script>
 </body>
 
 </html>
