pequeña modificacion de la seccion de producto

--- a/register.html
+++ b/register.html
@@ -94,7 +94,7 @@
                         <p class="pOculto">Las contraseñas no coinciden</p>
                     </div>
 
-                    <div>
+                    <div class="terminos">
                         <input type="checkbox" name="hobbies" value="acepto" id="acepto">
                         <label>Acepto términos y condiciones</label>
                     </div>
