--- a/category.html
+++ b/category.html
@@ -23,9 +23,10 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
+                    <li><a class="a_header" href="./index.html">Home</a></li>
                 </ul>
 
-                <form class="ul_header formularionav" action="./search.html" method="get">
+                <form class="ul_header formularionav" action="./search-results.html" method="get">
                     <input class="buscar" placeholder="Buscar..." type="search" name="buscar" id="buscar">
                     <button type="submit">Buscar</button>
                 </form>
@@ -34,12 +35,12 @@
 
             <section class="secciones_header_derecha ir_form">
 
-                <ul class="ul_header ul_ir_form">
+                <ul class="ul_header ul_ir_form ul_cambiada">
                     <li><a class="a_header" href="./login.html"> Login</a></li>
                     <li><a class="a_header" href="./register.html"> Registrate</a></li>
                 </ul>
-                <ul>
-                    <li class = "saludo"></li>
+                <ul class="ul_header ul_ir_form ul_oculta">
+                    <li class = "saludo a_header"></li>
                 </ul>
 
             </section>
@@ -94,6 +95,7 @@
     <script src="./js/vallidar_buscador.js"></script>
     <script src="./js/categorias.js"></script>
     <script src="./js/saludo.js"></script>
+    <script src="./js/logout.js"></script>
 </body>
 
 </html>
