--- a/login.html
+++ b/login.html
@@ -23,9 +23,10 @@
 
                 <ul class="ul_header">
                     <li> <a href="./index.html"> <img id="logo" src="./img/logo.png" alt="Logo"></a></li>
+                    <li><a class="a_header" href="./index.html">Home</a></li>
                 </ul>
 
-                <form class="ul_header formularionav" action="./search.html" method="get">
+                <form class="ul_header formularionav" action="./search-results.html" method="get">
                     <input class="buscar" placeholder="Buscar..." type="search" name="buscar" id="buscar">
                     <button type="submit">Buscar</button>
                 </form>
